[gd_scene load_steps=39 format=2]

[ext_resource path="res://src/player/states/Swim.gd" type="Script" id=1]
[ext_resource path="res://src/player/states/Idle.gd" type="Script" id=2]
[ext_resource path="res://src/player/Player.gd" type="Script" id=3]
[ext_resource path="res://src/player/states/Jump.gd" type="Script" id=4]
[ext_resource path="res://src/player/states/Glissade.gd" type="Script" id=5]
[ext_resource path="res://assets/imgs/player_ALL/GOOS4X.png" type="Texture" id=6]
[ext_resource path="res://src/player/sub_states/None.gd" type="Script" id=7]
[ext_resource path="res://src/global/StateMachine.gd" type="Script" id=8]
[ext_resource path="res://src/player/states/Move.gd" type="Script" id=9]
[ext_resource path="res://src/player/states/Dash.gd" type="Script" id=10]
[ext_resource path="res://src/player/states/Grip.gd" type="Script" id=11]
[ext_resource path="res://src/player/states/WallSlide.gd" type="Script" id=12]

[sub_resource type="Animation" id=1]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 64, 65 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -25, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 66, 67 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 25, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 68, 69 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 70, 71 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 58, 59 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 60, 61 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 62, 63 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 3.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.9, 1.2, 1.7, 2.1, 2.6, 3.1, 3.6, 4.2, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 32, 27, 23, 34, 35, 34, 33, 12, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 52, 53 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 54, 55 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 56, 57 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41, 42, 43 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=16]
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47, 48, 49, 50, 51 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 88 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 89 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 90, 91, 92, 93, 94, 95, 96, 97 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 122, 123, 124, 125, 126, 127, 128, 129 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 98, 99, 100, 101, 102, 103, 104, 105 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 106, 107, 108, 109, 110, 111, 112, 113 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=23]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 114, 115, 116, 117, 118, 119, 120, 121 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=24]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75, 76, 77, 78, 79 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=25]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 80, 81, 82, 83, 84, 85, 86, 87 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 39, 55 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 101
script = ExtResource( 3 )

[node name="body" type="Sprite" parent="."]
texture = ExtResource( 6 )
vframes = 16
hframes = 16
frame = 90

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/climb_L = SubResource( 1 )
anims/climb_R = SubResource( 2 )
anims/dash_L = SubResource( 3 )
anims/dash_R = SubResource( 4 )
anims/fall_C = SubResource( 5 )
anims/fall_L = SubResource( 6 )
anims/fall_R = SubResource( 7 )
anims/idle_1 = SubResource( 8 )
anims/idle_2 = SubResource( 9 )
anims/idle_3 = SubResource( 10 )
anims/idle_4 = SubResource( 11 )
anims/jump_C = SubResource( 12 )
anims/jump_L = SubResource( 13 )
anims/jump_R = SubResource( 14 )
anims/run_L = SubResource( 15 )
anims/run_R = SubResource( 16 )
anims/slide_L = SubResource( 17 )
anims/slide_R = SubResource( 18 )
anims/swim_C = SubResource( 19 )
anims/swim_D = SubResource( 20 )
anims/swim_L = SubResource( 21 )
anims/swim_R = SubResource( 22 )
anims/swim_U = SubResource( 23 )
anims/walk_L = SubResource( 24 )
anims/walk_R = SubResource( 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )
shape = SubResource( 26 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Move" type="Node2D" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Jump" type="Node2D" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Glissade" type="Node2D" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Swim" type="Node2D" parent="StateMachine"]
script = ExtResource( 1 )

[node name="Climb" type="Node2D" parent="StateMachine"]
script = ExtResource( 11 )

[node name="WallSlide" type="Node2D" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Dash" type="Node2D" parent="StateMachine"]
script = ExtResource( 10 )

[node name="StateNodes" type="Node2D" parent="."]

[node name="WallRaycasts" type="Node2D" parent="StateNodes"]

[node name="WallRaycastsRight" type="Node2D" parent="StateNodes/WallRaycasts"]

[node name="RightUpWallRaycast" type="RayCast2D" parent="StateNodes/WallRaycasts/WallRaycastsRight"]
position = Vector2( 4, -12 )
enabled = true
cast_to = Vector2( 40, 0 )

[node name="RightDownWallRaycast" type="RayCast2D" parent="StateNodes/WallRaycasts/WallRaycastsRight"]
position = Vector2( 4, 32 )
enabled = true
cast_to = Vector2( 40, 0 )

[node name="WallRaycastsLeft" type="Node2D" parent="StateNodes/WallRaycasts"]

[node name="LeftUpWallRaycast" type="RayCast2D" parent="StateNodes/WallRaycasts/WallRaycastsLeft"]
position = Vector2( -4, -12 )
enabled = true
cast_to = Vector2( -40, 0 )

[node name="LeftDownWallRaycast" type="RayCast2D" parent="StateNodes/WallRaycasts/WallRaycastsLeft"]
position = Vector2( -4, 32 )
enabled = true
cast_to = Vector2( -40, 0 )

[node name="WallRaycastBottom" type="RayCast2D" parent="StateNodes/WallRaycasts"]
position = Vector2( -4, 44 )
enabled = true
cast_to = Vector2( 0, 55 )

[node name="WallStickyTimer" type="Timer" parent="StateNodes"]
wait_time = 0.3
one_shot = true

[node name="JumpTimer" type="Timer" parent="StateNodes"]
wait_time = 1.25
one_shot = true

[node name="ClimbTimer" type="Timer" parent="StateNodes"]
wait_time = 0.2
one_shot = true

[node name="ClimbRayCasts" type="Node2D" parent="StateNodes"]

[node name="ClimbRayCastRight" type="RayCast2D" parent="StateNodes/ClimbRayCasts"]
position = Vector2( 4, -38 )
enabled = true
cast_to = Vector2( 45, -10 )

[node name="ClimbRayCastLeft" type="RayCast2D" parent="StateNodes/ClimbRayCasts"]
position = Vector2( -4, -38 )
enabled = true
cast_to = Vector2( -45, -10 )

[node name="ClimbWallRayCastRight" type="RayCast2D" parent="StateNodes/ClimbRayCasts"]
position = Vector2( 4, -38 )
enabled = true
cast_to = Vector2( 45, 17 )

[node name="ClimbWallRayCastLeft" type="RayCast2D" parent="StateNodes/ClimbRayCasts"]
position = Vector2( -4, -38 )
enabled = true
cast_to = Vector2( -45, 17 )

[node name="MinGroundDistance" type="RayCast2D" parent="StateNodes"]
position = Vector2( 4, 44 )
enabled = true
cast_to = Vector2( 0, 70 )

[node name="SpecialStateMachine" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="None" type="Node2D" parent="SpecialStateMachine"]
script = ExtResource( 7 )

[node name="Invicible" type="Node2D" parent="SpecialStateMachine"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 3 )
smoothing_enabled = true

[node name="WaterLevel" type="Position2D" parent="."]
[connection signal="timeout" from="StateNodes/WallStickyTimer" to="StateMachine/WallSlide" method="_on_WallStickyTimer_timeout"]
[connection signal="timeout" from="StateNodes/JumpTimer" to="StateMachine/Jump" method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="StateNodes/ClimbTimer" to="." method="_on_ClimbTimer_timeout"]
